--- a/notebooks/checking HDF5 Files.ipynb
+++ b/notebooks/checking HDF5 Files.ipynb
@@ -70,9 +70,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "buzzard_1.9.9_3y3a_rsshift_run.h5  Buzzard_v2.0_Y3a_gold.h5\r\n",
-      "Buzzard-3_v2.0_Y3a_mastercat.h5    Buzzard_v2.0_Y3a_shape.h5\r\n",
-      "Buzzard_v2.0_Y3a_bpz.h5            nohup.out\r\n"
+      "buzzard_1.9.9_3y3a_rsshift_run.h5  Buzzard_v2.0_Y3a_gold.h5\n",
+      "Buzzard-3_v2.0_Y3a_mastercat.h5    Buzzard_v2.0_Y3a_shape.h5\n",
+      "Buzzard_v2.0_Y3a_bpz.h5            nohup.out\n"
      ]
     }
    ],
@@ -714,23 +714,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "desc-dia",
    "language": "python",
-   "name": "python2"
+   "name": "desc-dia"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.15"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
