--- a/mainAnalysis/runs/prepareInputFiles.ipynb
+++ b/mainAnalysis/runs/prepareInputFiles.ipynb
@@ -28,13 +28,6 @@
       "/cvmfs/des.opensciencegrid.org/fnal/anaconda2/envs/des18a/lib/python2.7/site-packages/h5py/__init__.py:36: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
       "  from ._conv import register_converters as _register_converters\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using Modified sklearn.mixture.GMM, modified to allow data weights\n"
-     ]
     }
    ],
    "source": [
@@ -76,7 +69,20 @@
      "output_type": "stream",
      "text": [
       "master file: \n",
-      " /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00032.hdf5\n",
+      " /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00017.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00018.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00019.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00020.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00022.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00032.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00034.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00035.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00038.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00044.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00045.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00046.hdf5\n",
+      "/data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00047.hdf5\n",
       "outdir: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/\n",
       "tile path: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles\n"
      ]
@@ -653,13 +659,277 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating photoz catalog: dnf_model\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00017.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 0.73 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00018.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 0.94 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00019.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.01 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00020.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.32 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00022.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.34 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00032.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.72 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 2.64 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00034.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 3.71 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00035.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 4.71 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00038.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 4.83 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00044.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.21 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00045.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.78 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00046.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.87 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00047.hdf5\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.90 min\n",
+      "\n",
+      "Total time: 5.90 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "outfile1=root+'aux_files/modelDNF_correction_mag_buzzard.txt'\n",
+    "outfile2=root+'aux_files/modelDNF_correction_z_buzzard.txt'\n",
+    "\n",
+    "generate_photoz_models('bias',copa.master_fname_tile_list,0.03,\n",
+    "                       zwindow_file=outfile2,zerror_file=outfile1,\n",
+    "                       group_name='dnf_model',nCores=60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generating photoz catalog: dnf\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00017.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 0.62 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00018.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 0.83 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00019.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 0.89 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00020.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.21 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00022.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.23 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00032.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 1.61 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00033.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 2.51 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00034.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 3.60 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00035.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 4.59 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00038.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 4.70 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00044.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.09 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00045.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.66 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00046.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.75 min\n",
+      "\n",
+      "\n",
+      "Load Infile\n",
+      "infile: /data/des61.a/data/johnny/Buzzard/Buzzard_v2.0.0/y3/output/tiles/buzzard_v2.0.0_copa_00047.hdf5\n",
+      "Error: model file is None\n",
+      "Computing pz0\n",
+      "Writing outfile\n",
+      "partial time: 5.79 min\n",
+      "\n",
+      "Total time: 5.79 min\n"
+     ]
+    }
+   ],
+   "source": [
+    "outfile1=None#root+'aux_files/modelDNF_correction_mag_buzzard.txt'\n",
+    "outfile2=root+'aux_files/modelDNF_correction_z_buzzard.txt'\n",
+    "\n",
+    "generate_photoz_models('bias',copa.master_fname_tile_list,0.03,\n",
+    "                       zwindow_file=outfile2,zerror_file=outfile1,\n",
+    "                       group_name='dnf',nCores=60)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# zw = root+'/aux_files/zwindow_model_buzzard_dnf.txt'\n",
-    "# generate_photoz_models('bias'    ,copa.master_fname_tile_list,0.03,zmodel_file=zw,group_name='dnf_model',nCores=60)\n"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
